@@ -1,6 +1,7 @@
 Release Notes
 
 * 7/14/2016
+  * setting old modtime in JG for high prio + running + one or more reset
   * using bulk increment in getOutput
   * using bulk fetch and insert for files in JG
 
